@@ -8,7 +8,7 @@ $.widget('ui.grid', {
 	},
 
 	_generateColumns: function() {
-		
+
 		this.columnsContainer = $('<tr class="ui-grid-columns"><td><div class="ui-grid-columns-constrainer"><table cellpadding="0" cellspacing="0"><tbody><tr class="ui-grid-header ui-grid-inner"></tr></tbody></table></div></td></tr>')
 			.appendTo(this.grid).find('table tbody tr');
 
@@ -16,9 +16,9 @@ $.widget('ui.grid', {
 			width: this.options.width,
 			overflow: 'hidden'
 		});
-		
+
 		this.columnsContainer.gridSortable({ instance: this });
-		
+
 	},
 
 	_generateFooter: function() {
@@ -26,26 +26,26 @@ $.widget('ui.grid', {
 		'<div class="ui-grid-footer-text ui-grid-limits"></div>'+
 		'</td></tr>').appendTo(this.grid).find('td');
 	},
-	
+
 	_generatePagination: function(response) {
 		this.pagination = $('<div class="ui-grid-footer-text" style="float: right;"></div>').appendTo(this.footer);
 		var pages = Math.round(response.totalRecords/this.options.limit);
 		this._updatePagination(response);
 	},
-	
+
 	_updatePagination: function(response) {
-		
+
 		var pages = Math.round(response.totalRecords/this.options.limit),
 			current = Math.round(this.offset / this.options.limit) + 1,
 			displayed = [];
 
 		this.pagination.empty();
-		
+
 		for (var i=current-1; i > 0 && i > current-3; i--) {
 			this.pagination.prepend('<a href="#" class="ui-grid-pagination">'+i+'</a>');
 			displayed.push(i);
 		};
-		
+
 		for (var i=current; i < pages+1 && i < current+3; i++) {
 			this.pagination.append(i==current? '<span class="ui-grid-pagination-current">'+i+'</span>' : '<a href="#" class="ui-grid-pagination">'+i+'</a>' );
 			displayed.push(i);
@@ -54,16 +54,16 @@ $.widget('ui.grid', {
 
 		if(pages > 1 && $.inArray(2, displayed) == -1) //Show front dots if the '2' is not already displayed and there are more pages than 1
 			this.pagination.prepend('<span class="ui-grid-pagination-dots">...</span>');
-		
+
 		if($.inArray(1, displayed) == -1) //Show the '1' if it's not already shown
 			this.pagination.prepend('<a href="#" class="ui-grid-pagination">1</a>');
 
 		if($.inArray(pages-1, displayed) == -1) //Show the dots between the current elipse and the last if the one before last is not shown
 			this.pagination.append('<span class="ui-grid-pagination-dots">...</span>');
-		
+
 		if($.inArray(pages, displayed) == -1) //Show the last if it's not already shown
 			this.pagination.append('<a href="#" class="ui-grid-pagination">'+pages+'</a>');
-			
+
 		this.pagination.prepend(current-1 > 0 ? '<a href="#" class="ui-grid-pagination">&lt;&lt;</a>' : '<span class="ui-grid-pagination">&lt;&lt;</span>');
 		this.pagination.append(current+1 > pages ? '<span class="ui-grid-pagination">&gt;&gt;</span>' : '<a href="#" class="ui-grid-pagination">&gt;&gt;</a>');
 
@@ -93,7 +93,7 @@ $.widget('ui.grid', {
 		//Generate content element and table
 		this.content = $('<tr><td><div class="ui-grid-content"><table cellpadding="0" cellspacing="0"><tbody></tbody></table></div></td></tr>')
 			.appendTo(this.grid).find('tbody');
-			
+
 		this.contentDiv = $('.ui-grid-content', this.grid);
 
                 // Set height of the height of the content div
@@ -122,7 +122,7 @@ $.widget('ui.grid', {
 			.bind('mouseleave.grid', function(event) {
 				$(self.tableRowHovered).removeClass('ui-grid-row-hover');
 			});
-		
+
 		this.contentDiv
 			.bind('scroll.grid', function(event) {
 				$('div.ui-grid-columns-constrainer', self.grid)[0].scrollLeft = this.scrollLeft;
@@ -132,49 +132,49 @@ $.widget('ui.grid', {
 		this._makeRowsSelectable();
 
 	},
-	
-	_initialUpdate: function() {		
+
+	_initialUpdate: function() {
 		this._update({ columns: true });
         },
 
-	_handleMove: function(event) {		
-	
+	_handleMove: function(event) {
+
 		// If we're over a columns header
 		if(this.columnHandleHovered) {
 			$('td.ui-grid-column-header *', this.grid).css('cursor', '');
 			this.columnHandleHovered = false;
 		}
-		
+
 		if($(event.target).is('.ui-grid-column-header') || $(event.target).parent().is('.ui-grid-column-header')) {
 
 			var target = $(event.target).is('.ui-grid-column-header') ? $(event.target) : $(event.target).parent();
                         var widget = $(target).data('gridResizable');
 			if (! (widget && widget._mouseCapture(event))) return;
-			
+
 			$('td.ui-grid-column-header *', this.grid).css('cursor', 'e-resize');
 			this.columnHandleHovered = true;
 			return; //Stop here to save performance
-			
+
 		}
-	
-		
+
+
 		//If we're over a table row
 		if($(event.target).parents('.ui-grid-row').length) {
-			
+
 			var target = $(event.target).parents('.ui-grid-row');
-			
+
 			if(this.tableRowHovered && this.tableRowHovered != target[0])
 				$(this.tableRowHovered).removeClass('ui-grid-row-hover');
-			
+
 			target.addClass('ui-grid-row-hover');
 			this.tableRowHovered = target[0];
 			return; //Stop here to save performance
-			
+
 		} else {
 			if(this.tableRowHovered)
 				$(this.tableRowHovered).removeClass('ui-grid-row-hover');
-		}	
-		
+		}
+
 	},
 
 	_handleClick: function(event) {
@@ -186,44 +186,44 @@ $.widget('ui.grid', {
 			this.sortColumn = data.id;
 			this._update({ columns: false, refresh: true });
 		}
-		
+
 		if($(event.target).is('a.ui-grid-pagination')) {
 			var html = event.target.innerHTML, current = Math.round(this.offset / this.options.limit) + 1;
 			if(html == '&gt;&gt;') current = current+1;
 			if(html == '&lt;&lt;') current = current-1;
 			if(!isNaN(parseInt(event.target.innerHTML,10))) current = parseInt(event.target.innerHTML,10);
-			
+
 			this.offset = (current-1) * this.options.limit;
 			this._update();
 		}
-		
+
 		return false;
 
 	},
 
 	_makeRowsSelectable: function() {
-		
+
 		this.content.parent().parent().selectable({
 			filter: 'tr',
 			multiple: this.options.multipleSelection,
 			selectClass: 'ui-grid-row-selected',
 			focusClass: 'ui-grid-row-focussed',
 			select: function(e, ui) {
-				
+
 				var itemOffset = ui.currentFocus.offset();
 				var itemHeight = ui.currentFocus.height();
 				var listOffset = $(this).offset();
 				var listHeight = $(this).height();
-				
+
 				if(itemOffset.top - listOffset.top + itemHeight > listHeight) {
 					this.scrollTop = ((itemOffset.top + this.scrollTop - listOffset.top + itemHeight) - listHeight);
 				} else if(itemOffset.top < listOffset.top) {
 					this.scrollTop = itemOffset.top + this.scrollTop - listOffset.top;
 				};
-				
+
 			}
 		});
-		
+
 	},
 
 	_update: function(o) {
@@ -276,26 +276,26 @@ $.widget('ui.grid', {
 				options.fill({
 					chunk: options.chunk,
 					data: data
-				});				
+				});
 
 			} else { //otherwise, simply append the rows to the now emptied list
 
 				for (var i=0; i < response.records.length; i++) {
 					self._addRow(response.records[i]);
 				};
-	
+
 				self._syncColumnWidth();
-				
+
 				//If we're using infinite scrolling, we have to restart it
 				if(self.infiniteScrolling) {
 					self.contentDiv.infiniteScrolling('restart');
 				}
 
 			}
-	
+
 			//Initiate infinite scrolling if we don't use pagination and total records exceed the displayed records
 			if(!self.infiniteScrolling && !self.options.pagination && self.options.limit < response.totalRecords) {
-				
+
 				self.infiniteScrolling = true;
 				self.contentDiv.infiniteScrolling({
 					total: self.options.allocateRows ? response.totalRecords : false,
@@ -308,7 +308,7 @@ $.widget('ui.grid', {
 						$('div.ui-grid-limits', self.footer).html('Result ' + ui.firstItem + '-' + ui.lastItem + (ui.total ? ' of '+ui.total : ''));
 					}
 				});
-				
+
 			}
 
 			if(!self.infiniteScrolling)
@@ -322,13 +322,13 @@ $.widget('ui.grid', {
 
 		var testTR = $('tr:first td', this.content);
 		var totalWidth = 0;
-		
+
 		for (var i=0; i < this.columns.length; i++) {
 			$(testTR[i]).width($('td:eq('+i+')', this.columnsContainer)[0].style.width);
 			totalWidth += parseInt($('td:eq('+i+')', this.columnsContainer)[0].style.width, 10);
 			//$('td:eq('+i+') div', this.columnsContainer).width(testTR[i].offsetWidth - 10); //TODO: Subtract real paddings of inner divs
 		};
-		
+
 		this.content.parent().width(totalWidth);
 
 	},
@@ -337,7 +337,7 @@ $.widget('ui.grid', {
 
 		this.columns = item;
 		var totalWidth = 25;
-		
+
 		for (var i=0; i < item.length; i++) {
 			var column = $('<td class="ui-grid-column-header ui-state-default"><div>'+item[i].label+'</div></td>')
 				.width(item[i].width)
@@ -346,10 +346,10 @@ $.widget('ui.grid', {
 				.gridResizable();
 			totalWidth += item[i].width;
 		};
-		
+
 		//This column is the last and only used to serve as placeholder for a non-existant scrollbar
 		$('<td class="ui-grid-column-header ui-state-default"><div></div></td>').width(25).appendTo(this.columnsContainer);
-		
+
 		//Update the total width of the wrapper of the column headers
 		this.columnsContainer.parent().parent().width(totalWidth);
 
@@ -364,7 +364,7 @@ $.widget('ui.grid', {
 			$('<td class="ui-grid-column ui-state-active"><div>'+item[this.columns[i].id]+'</div></td>')
 				.appendTo(row);
 		};
-		
+
 		return row;
 
 	}
@@ -373,26 +373,26 @@ $.widget('ui.grid', {
 
 
 $.widget('ui.gridResizable', $.extend({}, $.ui.mouse, {
-	
+
 	_init: function() {
 		this.table = this.element.parent().parent().parent();
 		this.gridTable = this.element.parents('.ui-grid').find('div.ui-grid-content > table');
 		this._mouseInit();
 	},
-	
+
 	_mouseCapture: function(event) {
 
 		this.offset = this.element.offset();
 		if((this.offset.left + this.element.width()) - event.pageX < 5) {
 			return true;
 		};
-		
+
 		return false;
-		
+
 	},
-	
+
 	_mouseStart: function(event) {
-		
+
 		$.extend(this, {
 			startPosition: event.pageX,
 			startWidth: this.element.width(),
@@ -400,23 +400,23 @@ $.widget('ui.gridResizable', $.extend({}, $.ui.mouse, {
 			gridTableStartWidth: this.gridTable.width(),
 			index: this.element.parent().find('td').index(this.element[0])
 		});
-		
+
 	},
-	
+
 	_mouseDrag: function(event) {
 
 		this.element.css('width', this.startWidth + (event.pageX - this.startPosition));
 		this.table.css('width', this.tableStartWidth + (event.pageX - this.startPosition));
-		
+
 		$('tr:eq(0) td:eq('+this.index+')', this.gridTable).css('width', this.startWidth + (event.pageX - this.startPosition));
 		this.gridTable.css('width', this.gridTableStartWidth + (event.pageX - this.startPosition));
-		
+
 	},
-	
+
 	_mouseStop: function(event) {
 		//TODO: Send column width update to the backend, and/or fire callback
 	}
-	
+
 }));
 
 $.extend($.ui.gridResizable, {
@@ -430,67 +430,67 @@ $.extend($.ui.gridResizable, {
 
 
 $.widget('ui.gridSortable', $.extend({}, $.ui.mouse, {
-	
+
 	_init: function() {
 		this._mouseInit();
 	},
-	
+
 	_mouseCapture: function(event) {
 
                 var el = $(event.target);
                 this.item = el.hasClass('ui-grid-column-header') ? el : el.parents('.ui-grid-column-header');
 		this.offset = this.item.offset();
-		
+
 		return true;
-		
+
 	},
-	
+
 	_mouseStart: function(event) {
-		
+
 		var self = this;
-		
+
 		this.offsets = [];
 		this.items = this.element.find('td').each(function(i) {
 			if(self.item[0] != this) self.offsets.push([this, $(this).offset().left]);
 		});
-		
+
 		$.extend(this, {
 			startPosition: event.pageX,
 			index: this.items.index(this.item[0])
 		});
-		
+
 	},
-	
+
 	_mouseDrag: function(event) {
 
 		var self = this;
 			//this.element.css('width', this.startWidth + (event.pageX - this.startPosition));
 		$(self.offsets).each(function(i) {
-			
+
 			if(
 				$.ui.isOverAxis(event.pageX, this[1], this[0].offsetWidth)
 			) {
 				var dir = $.ui.isOverAxis(event.pageX, this[1], this[0].offsetWidth/2) ? 'left' : 'right';
 				if(!self.lastHovered || self.lastHovered[0] != this[0] || self.lastHovered[1] != dir) {
-					
+
 					if(self.lastHovered) $(self.lastHovered[0]).removeClass('ui-grid-column-sort-right ui-grid-column-sort-left');
-					
+
 					self.lastHovered = [this[0], dir];
 					$(self.lastHovered[0]).addClass('ui-grid-column-sort-'+dir);
 				}
 			}
-			
+
 		});
-		
+
 	},
-	
+
 	_mouseStop: function(event) {
-		
+
 		var self = this;
 		if(this.lastHovered) {
 			$(this.lastHovered[0]).removeClass('ui-grid-column-sort-right ui-grid-column-sort-left');
 			$(this.lastHovered[0])[this.lastHovered[1] == 'right' ? 'after' : 'before'](this.item);
-			
+
 			//TODO: Reorder actual data columns
 			$('tr', this.options.instance.contentDiv).each(function(i) {
 				$('> td:eq('+self.items.index(self.lastHovered[0])+')', this)[self.lastHovered[1] == 'right' ? 'after' : 'before']($('> td:eq('+self.index+')', this));
@@ -498,7 +498,7 @@ $.widget('ui.gridSortable', $.extend({}, $.ui.mouse, {
 
 		}
 	}
-	
+
 }));
 
 $.extend($.ui.gridSortable, {
